--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Javascript learning by wwff</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Javascript learning</h1>
-        <h2>DOM、BOM、原生js</h2>
+        <p>原生js弹性运动</p>
 
-        <section id="downloads">
-          <a href="https://github.com/wwff/javascript_learning/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/wwff/javascript_learning/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/wwff/javascript_learning" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="view"><a href="https://github.com/wwff/javascript_learning">View the Project on GitHub <small>wwff/javascript_learning</small></a></p>
 
-    <div class="container">
-      <section id="main_content">
-        <p><code>window.onload=function(){</code>
-    <code>var oCrash=document.getElementById('crash');</code>
-    <code>var speedX=5;</code>
-    <code>var speedY=5;</code>
-    <code>startCrash();</code></p>
 
-<pre><code>``function startCrash(){``
-    ``setInterval(function(){``
-        ``var X=oCrash.offsetLeft+speedX;``
-        ``var Y=oCrash.offsetTop+speedY;``
-        ``if(X &gt; document.documentElement.clientWidth - oCrash.offsetWidth){``
-            ``X=document.documentElement.clientWidth-oCrash.offsetWidth;``
-            ``speedX*=-1;``
-        ``}else if(X &lt; 0){``
-            ``X=0;``
-            ``speedX*=-1;``
-        ``}``
-        ``if(Y &gt; document.documentElement.clientHeight-oCrash.offsetHeight){``
-            ``Y=document.documentElement.clientHeight-oCrash.offsetHeight;``
-            ``speedY*=-1;``
-        ``}else if(Y &lt; 0){``
-            ``Y=0;``
-            ``speedY*=-1;``
-        ``}``
-        ``oCrash.style.left = X + 'px';``
-        ``oCrash.style.top = Y + 'px';``
-    ``},35);``
-``}``
+        <ul>
+          <li><a href="https://github.com/wwff/javascript_learning/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/wwff/javascript_learning/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/wwff/javascript_learning">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="弹性运动" class="anchor" href="#%E5%BC%B9%E6%80%A7%E8%BF%90%E5%8A%A8" aria-hidden="true"><span class="octicon octicon-link"></span></a>弹性运动</h1>
+
+<p><code>window.onload=function(){</code>
+    <code>var oElastic=document.getElementById('elastic');</code>
+    <code>var oBtn=document.getElementById('btn');</code>
+    <code>var timer=null;</code>
+    <code>var speedX=15;</code>
+    <code>var speedY=50;</code>
+    <code>oBtn.onclick=function(){</code></p>
+
+<pre><code>    `elasticCrash();`
+
+`}`
+`function elasticCrash(){`
+    `clearInterval(timer);`
+    `timer=setInterval(function(){`
+        `speedY += 5;`
+
+        `var Y=oElastic.offsetTop + speedY;`
+        `var X=oElastic.offsetLeft + speedX;`
+        `if(Y &gt;document.documentElement.clientHeight - oElastic.offsetHeight){`
+
+            `Y=document.documentElement.clientHeight - oElastic.offsetHeight;`
+
+            `speedY*=-1;`
+
+            `speedY*=0.75;`
+
+            `speedX*=0.75;`
+        `}`
+
+        `oElastic.style.top = Y+'px';`
+        `oElastic.style.left = X+'px';`
+    `},30);`
+`}`
 </code></pre>
 
 <p><code>}</code></p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/wwff">wwff</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
